<resources>
    <string name="app_name">Books Inventory</string>

    <string name="add_book">Add a new book</string>

    <!--Empty Activity-->
    <string name="empty_view_title_text">There are no books in the list.</string>
    <string name="empty_view_subtitle_text">Press on "Add a new book"\nto add books to inventory.</string>

    <!--Editor activity layout titles-->
    <string name="new_book_title">Add new book</string>
    <string name="edit_book_title">Edit book</string>

    <!-- Toast message in editor indicating update status -->
    <string name="editor_update_successful">Book updated</string>
    <string name="editor_update_failed">Error with updating book</string>

    <!-- Toast message in editor indicating insertion status -->
    <string name="editor_insert_successful">Book saved</string>
    <string name="editor_insert_failed">Error with saving book</string>

    <!-- Toast message in editor indicating deletion status -->
    <string name="editor_delete_successful">Book deleted</string>
    <string name="editor_delete_failed">Error with deleting book</string>
    <string name="main_delete_failed">Error with deleting books</string>

    <!--categories name for editor activity-->
    <string name="book_name">Book name:</string>
    <string name="book_price">Book price:</string>
    <string name="book_quantity">Book quantity:</string>
    <string name="supplier_name">Supplier name:</string>
    <string name="supplier_phone">Supplier phone:</string>

    <!--hint strings for editor activity-->
    <string name="book_name_hint">Book name</string>
    <string name="book_price_hint">Price</string>
    <string name="book_supplier_name_hint">Supplier name</string>
    <string name="book_supplier_phone_hint">Supplier phone</string>

    <!--main menu categories-->
    <string name="action_delete_all_entries">Delete all books</string>

    <!--editor menu categories-->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!--deletion conformation dialog-->
    <string name="delete_dialog_msg">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Dialog message for unsaved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!--phone strings-->
    <string name="phone_dial_failed">Error with dialing to supplier</string>

    <!--sale button-->
    <string name="sale">Sale</string>
    <string name="sale__update_success">Sale was updated</string>
    <string name="sale__update_failed">Sale update failed</string>

    <!--error massages for non valid data-->
    <string name="error_book_name">Book Name is required</string>
</resources>
