<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" />

    <Button
        android:id="@+id/add_book"
        style="@style/activityTextStyle"
        android:text="@string/add_book" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/emptyActivityText"
            android:padding="16dp"
            android:text="@string/empty_view_title_text" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            style="@style/emptyActivityText"
            android:layout_below="@id/empty_title_text"
            android:text="@string/empty_view_subtitle_text" />
    </RelativeLayout>

</RelativeLayout>
